@@ -161,6 +161,8 @@ o New control file dkimkeys to override DKIMKEY and allow domain specfic
 85. include noreturn.h from libqmail defining macro no_return
     use no_return macro to declare funtions that do not return back to
     caller
+- 05/09/2021
+86. changed permissions for dirs with 555 to 755
 
 * 
 Release 2.13 Start 14/02/2021
