@@ -152,6 +152,8 @@ o svscan: ability to run as PID 1 and reap dead children
 65. include noreturn.h from libqmail defining macro no_return
     use no_return macro to declare funtions that do not return back to
     caller
+- 05/09/2021
+66. changed permissions for dirs with 555 to 755
 
 * Sunday 14 February 2021 07:46:33 PM IST
 Release 1.0 Start 09/10/2020
